Get back to operating baseline

--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -8,7 +8,7 @@
 
     <meta name="generator" content="{{ eleventy.generator }}">
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
     <link rel="stylesheet" href="https://unpkg.com/littlefoot/dist/littlefoot.css" />
     <link rel="stylesheet" href="https://unpkg.com/dracula-prism/dist/css/dracula-prism.min.css">
   </head>
