Use URL shortcode for liveplayer

--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -82,4 +82,4 @@ layout: layouts/base.njk
   </div>
 </article>
 <!-- Curious how my live player works? Check out the unminified source here: https://github.com/marcus-crane/utf9k/blob/main/assets/js/live-player.js -->
-<script type="text/javascript" src="/js/live-player.js"></script>
+<script type="text/javascript" src="{{ '/js/live-player.js' | url }}"></script>
