--- a/_includes/postslist.njk
+++ b/_includes/postslist.njk
@@ -1,7 +1,7 @@
 <ul>
-{% for post in collections.recentPostsHomepage %}
+{%- for post in (collections.recentPostsHomepage | reverse).slice(0, 5) %}
   <li>
     <a href="{{ post.url | url }}">{% if post.data.title %}{{ post.data.title }}{% endif %}</a>
   </li>
-{% endfor %}
+{%- endfor %}
 </ul>
