Fix up display of projects

--- a/projects-list.njk
+++ b/projects-list.njk
@@ -8,13 +8,14 @@ permalink: /projects/
     <h1>Projects</h1>
   </header>
   <ul>
-    {%- for post in (collections.projects | reverse) %}
-      <li>
-        <a href="{{ post.url | url }}">
-          {% if post.data.title %}{{ post.data.title }}
-          {% endif %}
-        </a>
-      </li>
-    {%- endfor %}
+    {% for status, statusProjects in collections.projectsByStatus %}
+      <h2>{{ status }}</h2>
+      {% for post in statusProjects | reverse %}
+        <li>
+          <a href="{{ post.url | url }}">{% if post.data.title %}{{ post.data.title }}{% endif %}</a>
+          <time>{{ post.date | dateFmt }}</time>
+        </li>
+      {% endfor %}
+    {% endfor %}
   </ul>
 </main>
