--- a/search.njk
+++ b/search.njk
@@ -2,7 +2,7 @@
 permalink: '/search.json'
 ---
 [
-  {%- for post in collections.questions | reverse %}
+  {%- for post in collections.question | reverse %}
     {
       "slug": "{{ post.data.slug }}",
       "content": "{{ post.template.frontMatter.content | dump(2) }}",
@@ -14,5 +14,5 @@ permalink: '/search.json'
       ],
       "title": "{{ post.data.title }}"
     }{% if not loop.last %},{% endif %}
-  {%- endfor %}
+{%- endfor %}
 ]
