--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -1,11 +1,13 @@
 ---
 layout: layouts/base.njk
-templateClass: tmpl-post
 ---
 
 <article>
   <header>
     <h1>{{ title }}</h1>
+    <div id="post-meta">
+      <time datetime="{{ page.date }}">{%- if page.draft %}This is an unpublished draft{% else %}{{ page.date | dateFmt("DDD") }}{%- endif %}</time> · TIME TO READ
+    </div>
   </header>
   <div id="post-body">
     {{ content | safe }}
