Use dynamic URL for robots.txt

--- a/robots.njk
+++ b/robots.njk
@@ -10,4 +10,4 @@ Disallow: {{ post.url | url }}
 {%- endif %}
 {%- endfor %}
 
-Sitemap: https://utf9k.net/sitemap.xml
+Sitemap: {{ deploy.url }}/sitemap.xml
