Import remainder posts

--- a/_includes/partials/head.njk
+++ b/_includes/partials/head.njk
@@ -7,4 +7,4 @@
 
 <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
 <link rel="stylesheet" href="https://unpkg.com/littlefoot/dist/littlefoot.css" />
-<link rel="stylesheet" href="https://unpkg.com/dracula-prism/dist/css/dracula-prism.min.css">
+<link rel="stylesheet" href="https://unpkg.com/dracula-prism/dist/css/dracula-prism.min.css" />
