Remove type from src script

--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -14,4 +14,4 @@ layout: layouts/base.njk
   </div>
 </article>
 
-<script type="text/javascript" src="/js/footnotes.js"></script>
+<script src="/js/footnotes.js"></script>
