--- a/search.njk
+++ b/search.njk
@@ -5,12 +5,8 @@ permalink: '/search.json'
   {%- for post in collections.question | reverse %}
     {
       "slug": "{{ post.data.slug }}",
-      "content": "{{ post.template.frontMatter.content | striptags(true) | dump(2) | replace('"', '') | replace('\\', '') | safe }}",
-      "tags": [
-        {%- for tag in post.data.tags %}
-        "{{ tag }}"{% if not loop.last %},{% endif %}
-        {%- endfor %}
-      ],
+      "content": "{{ post.template.frontMatter.content | striptags(true) | nl2br | dump(2) | replace('"', '') | replace('\\', '') | safe }}",
+      "tags": [{%- for tag in post.data.tags %}"{{ tag }}"{% if not loop.last %},{% endif %}{%- endfor %}],
       "title": "{{ post.data.title }}"
     }{% if not loop.last %},{% endif %}
 {%- endfor %}
