--- a/_includes/partials/head.njk
+++ b/_includes/partials/head.njk
@@ -8,3 +8,5 @@
 <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
 <link rel="stylesheet" href="https://unpkg.com/littlefoot/dist/littlefoot.css" />
 <link rel="stylesheet" href="https://unpkg.com/dracula-prism/dist/css/dracula-prism.min.css" />
+
+<script defer data-domain="utf9k.net" src="/statistician.js"></script>
