--- a/rss.njk
+++ b/rss.njk
@@ -6,7 +6,7 @@
     "title": "utf9k",
     "subtitle": "Posts about technology and other bits and pieces",
     "language": "en",
-    "feedUrl": "https://utf9k.net/feed.xml",
+    "url": "https://utf9k.net",
     "author": {
       "name": "Marcus Crane",
       "email": "marcus@utf9k.net"
@@ -18,22 +18,22 @@
 <feed xmlns="http://www.w3.org/2005/Atom" xml:base="{{ deploy.url }}">
   <title>{{ metadata.title }}</title>
   <subtitle>{{ metadata.subtitle }}</subtitle>
-  <link href="{{ permalink | absoluteUrl(deploy.url) }}" rel="self"/>
-  <link href="{{ deploy.url }}"/>
+  <link href="{{ permalink | url | absoluteUrl(metadata.url) }}" rel="self"/>
+  <link href="{{ metadata.url }}"/>
   <updated>{{ collections.post | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
-  <id>{{ deploy.url }}</id>
+  <id>{{ metadata.url }}</id>
   <author>
     <name>{{ metadata.author.name }}</name>
     <email>{{ metadata.author.email }}</email>
   </author>
   {%- for post in collections.post | reverse %}
-    {%- set absolutePostUrl = post.url | absoluteUrl(deploy.url) %}
-    <entry>
-      <title>{{ post.data.title }}</title>
-      <link href="{{ absolutePostUrl }}"/>
-      <updated>{{ post.date | dateToRfc3339 }}</updated>
-      <id>{{ absolutePostUrl }}</id>
-      <content xml:lang="{{ metadata.language }}" type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
-    </entry>
+  {% set absolutePostUrl %}{{ post.url | url | absoluteUrl(metadata.url) }}{% endset %}
+  <entry>
+    <title>{{ post.data.title }}</title>
+    <link href="{{ absolutePostUrl }}"/>
+    <updated>{{ post.date | dateToRfc3339 }}</updated>
+    <id>{{ absolutePostUrl }}</id>
+    <content xml:lang="{{ metadata.language }}" type="html">{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) }}</content>
+  </entry>
   {%- endfor %}
 </feed>
