Fix styling on post and project list between titles and dates

--- a/blog-list.njk
+++ b/blog-list.njk
@@ -14,10 +14,7 @@ permalink: /blog/
       {# TODO: Replace this with a Nunjucks filter #}
       {% for post in yearPosts | reverse %}
         <li>
-          <a href="{{ post.url | url }}">
-            {% if post.data.title %}{{ post.data.title }}
-            {% endif %}
-          </a>
+          <a href="{{ post.url | url }}">{% if post.data.title %}{{ post.data.title }}{% endif %}</a>
           <time>{{ post.date | dateFmt("MMM dd") }}</time>
         </li>
       {% endfor %}
