--- a/projects-list.njk
+++ b/projects-list.njk
@@ -12,10 +12,7 @@ permalink: /projects/
       <h2>{{ status }}</h2>
       {% for post in statusProjects | reverse %}
         <li>
-          <a href="{{ post.url | url }}">
-            {% if post.data.title %}{{ post.data.title }}
-            {% endif %}
-          </a>
+          <a href="{{ post.url | url }}">{% if post.data.title %}{{ post.data.title }}{% endif %}</a>
           <time>{{ post.date | dateFmt }}</time>
         </li>
       {% endfor %}
