Don't break code blocks over many lines

--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,7 @@ article p code {
   letter-spacing: .025em;
   line-height: 1rem;
   padding: 0.2rem 0.3rem;
+  white-space: nowrap;
 }
 
 @media (prefers-color-scheme: dark) {
