Add home link to books page

--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -23,7 +23,9 @@ layout: layouts/base.njk
       <div id="post-stream">
         <center>
           <header>
-            <h3>Books I'm *ahem* paging through</h3>
+            <h3>
+              <a href="/books">Books I'm *ahem* paging through</a>
+            </h3>
           </header>
           <ul>
             {% for book in books[0].books %}
