--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ metadata.language }}">
+<html lang="en">
   <head>
     {% include 'partials/head.njk' %}
   </head>
