Fix some HTML semantics

--- a/_includes/partials/header.njk
+++ b/_includes/partials/header.njk
@@ -1,27 +1,29 @@
 <header class="navigation">
   <a href="/" id="logo">
-    <img src="/favicon.png" alt="utf9k" width="16px" height="16px">
+    <img src="/favicon.png" alt="utf9k" width="16" height="16">
     <span>utf9k</span>
   </a>
   <nav>
-    <li>
-      <a href="/blog">Blog</a>
-    </li>
-    <span>//</span>
-    <li>
-      <a href="/projects">Projects</a>
-    </li>
-    <span>//</span>
-    <li>
-      <a href="/about">About</a>
-    </li>
-    <span>//</span>
-    <li>
-      <a href="/questions">Questions</a>
-    </li>
-    <span>//</span>
-    <li>
-      <a href="/rss.xml">RSS</a>
-    </li>
+    <ul>
+      <li>
+        <a href="/blog">Blog</a>
+      </li>
+      <span>//</span>
+      <li>
+        <a href="/projects">Projects</a>
+      </li>
+      <span>//</span>
+      <li>
+        <a href="/about">About</a>
+      </li>
+      <span>//</span>
+      <li>
+        <a href="/questions">Questions</a>
+      </li>
+      <span>//</span>
+      <li>
+        <a href="/rss.xml">RSS</a>
+      </li>
+    </ul>
   </nav>
 </header>
