--- a/_includes/partials/head.njk
+++ b/_includes/partials/head.njk
@@ -6,7 +6,7 @@
 <meta name="generator" content="{{ eleventy.generator }}">
 
 <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
-<link rel="stylesheet" href="https://unpkg.com/littlefoot/dist/littlefoot.css" />
-<link rel="stylesheet" href="https://unpkg.com/dracula-prism/dist/css/dracula-prism.min.css" />
+<link rel="stylesheet" href="https://unpkg.com/littlefoot/dist/littlefoot.css">
+<link rel="stylesheet" href="https://unpkg.com/dracula-prism/dist/css/dracula-prism.min.css">
 
 <script defer data-domain="utf9k.net" src="/statistician.js"></script>
