--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -55,6 +55,11 @@ layout: layouts/base.njk
             <i id="elapsed">00:00</i> / <i id="duration">59:59</i>
           </div>
       </div>
+      <div class="player-history">
+        <p>Previously</p>
+        <ul id="played-items">
+        </ul>
+      </div>
       <hr />
       <div id="post-stream">
         <h3>Recently updated pages</h3>
