Add Mastodon backlink

--- a/_includes/partials/head.njk
+++ b/_includes/partials/head.njk
@@ -5,6 +5,8 @@
 
 <meta name="generator" content="{{ eleventy.generator }}">
 
+<link rel="me" href="https://mastodon.cloud/@utf9k" />
+
 <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
 <link rel="stylesheet" href="https://unpkg.com/littlefoot/dist/littlefoot.css">
 <link rel="stylesheet" href="https://unpkg.com/dracula-prism/dist/css/dracula-prism.min.css">
