--- a/_includes/partials/head.njk
+++ b/_includes/partials/head.njk
@@ -5,7 +5,7 @@
 
 <meta name="generator" content="{{ eleventy.generator }}">
 
-<link rel="me" href="https://mastodon.cloud/@utf9k" />
+<link rel="me" href="https://mastodon.nz/@utf9k" />
 
 <link rel="stylesheet" href="{{ '/css/style.css' | url }}">
 <link rel="stylesheet" href="https://unpkg.com/littlefoot/dist/littlefoot.css">
