--- a/css/style.css
+++ b/css/style.css
@@ -157,8 +157,7 @@ svg {
 
 pre {
   border-radius: 0.375rem;
-  font-size: .875em;
-  line-height: 1.7;
+  font-size: .75em;
   overflow-x: auto;
   padding: 0.8rem 1.1rem;
 }
@@ -290,14 +289,13 @@ article .highlight {
 }
 
 article p code {
-  background-color: var(--bg-dark);
-  color: var(--text-light);
-  font-family: inherit;
+  background-color: var(--background);
+  color: var(--foreground);
+  font-family: PT Mono,Consolas,Monaco,"Andale Mono","Ubuntu Mono",monospace; /* Matches prism config */
   font-size: .75rem;
   font-weight: 500;
-  letter-spacing: .025em;
-  line-height: 1rem;
   padding: 0.2rem 0.3rem;
+  border-radius: 0.3rem;
   white-space: nowrap;
 }
 
@@ -365,7 +363,7 @@ main ol, main ul, #post-body > ul, #post-body > ol {
 
 #content > main ul > li, #content > main ol > li, #post-body ul > li, #post-body > ol > li {
   position: relative;
-  padding-left: 1.75em;
+  padding-left: 1.5em;
 }
 
 #content > main ul > li, #content > main ol > li {
@@ -374,13 +372,8 @@ main ol, main ul, #post-body > ul, #post-body > ol {
 
 main ul > li:before, main ol > li:before,
 #post-body ul > li:before, #post-body > ol > li:before {
-  content: "";
+  content: "»";
   position: absolute;
-  background-color: #23262b;
-  width: .375em;
-  height: .375em;
-  border-radius: 50%;
-  top: .6875em;
   left: .25em;
 }
 
