Animated live player borders

--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -46,7 +46,11 @@ layout: layouts/base.njk
     <div id="recent-updates">
       <div id="liveplayer">
         <h3 id="action">😵‍💫 This widget should load shortly!</h3>
-        <img src="/cover.png" id="cover">
+        <div>
+          <div id="rotating-border" class="rotating-border-hidden">
+            <img id="cover" src="https://metalanarchydotcom.files.wordpress.com/2015/04/failuretheheartisamonster.jpg" />
+          </div>
+        </div>
         <strong id="title">Fingers Crossed</strong>
         <br />
         <i id="subtitle">It should update if things aren't broken</i>
