--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,14 +19,16 @@
       <div id="post-stream">
         <center>
           <header>
-            <h3>Books I'm *ahem* paging through</h3>
+            <h3>
+              <a href="/books">Books I'm *ahem* paging through</a>
+            </h3>
           </header>
           <ul>
           {{ range first 1 $.Site.Data.books }}
             {{ range where .books "progress" "!=" 100 }}
               <li style="display: inline-block;">
                 <a href="{{ .link }}">
-                  <img src="{{ .cover }}" height="180px" style="border-radius: 3px;" />
+                  <img alt="A cover photo of the book titled {{ .title }}" src="{{ .cover }}" height="180px" style="border-radius: 3px;" />
                 </a>
               </li>
             {{ end }}
@@ -38,8 +40,12 @@
     </div>
     <div id="recent-updates">
       <div id="liveplayer">
-        <h3 id="action">😵‍💫 This widget should load shortly!</h3>
-        <img src="/cover.png" id="cover">
+        <h3 id="action">😵‍💫 This widget should have loaded by now!</h3>
+        <div>
+          <div id="rotating-border" class="rotating-border-hidden">
+            <img src="/cover.png" id="cover">
+          </div>
+        </div>
         <strong id="title">Fingers Crossed</strong>
         <br />
         <i id="subtitle">It should update if things aren't broken</i>
@@ -47,6 +53,11 @@
           <div id="progress">
             <i id="elapsed">00:00</i> / <i id="duration">59:59</i>
           </div>
+      </div>
+      <div class="player-history">
+        <p>Previously</p>
+        <ul id="played-items">
+        </ul>
       </div>
       <hr />
       <div id="post-stream">
@@ -70,7 +81,7 @@
             {{ range .games }}
               <li style="display: inline-block;">
                 <a href="{{ .link }}">
-                  <img src="{{ .cover }}" height="180px" style="border-radius: 3px;" />
+                  <img alt="Box art for the game titled {{ .title }}" src="{{ .cover }}" height="180px" style="border-radius: 3px;" />
                 </a>
               </li>
             {{ end }}
@@ -89,5 +100,7 @@
   {{ $defines := dict "process.env.NODE_ENV" `"production"` }}
   {{ $opts := dict "targetPath" $targetPath "defines" $defines }}
   {{ $built := resources.Get $targetPath | js.Build $opts | fingerprint }}
+  <!-- TODO: Figure out how to retain comments -->
+  <!-- Curious how my live player works? Check out the unminified source here: https://github.com/marcus-crane/utf9k/blob/main/assets/js/live-player.js -->
   <script type="text/javascript" src="{{ $built.RelPermalink }}" integrity="{{ $built.Data.Integrity }}"></script>
 {{ end }}
