--- a/layouts/_default/_markup/render-heading.html
+++ b/layouts/_default/_markup/render-heading.html
@@ -1,3 +1,4 @@
-<div class="heading heading-{{ .Level }}">
-  <a href="#{{ .Anchor | safeURL }}">{{ $header := "" }}{{ range (seq .Level) }}{{ add $header "#" }}{{ end }}</a><h{{ .Level }} id="{{ .Anchor | safeURL }}"> {{ .Text | safeHTML }}</h{{ .Level }}>
-</div>
+<h{{ .Level }} id="{{ .Anchor | safeURL }}">
+  <a class="jumplink" href="#{{ .Anchor | safeURL }}" aria-hidden="true">¶</a>
+  {{ .Text | safeHTML }}
+</h{{ .Level }}>
