--- a/layouts/shortcodes/notice.html
+++ b/layouts/shortcodes/notice.html
@@ -1,11 +1,8 @@
-<div id="notice-wrapper">
+<div class="notice">
   <hr class="hidden" />
-  <div class="flex rounded-lg bg-gray-200 dark:bg-gray-800 p-8 mb-8 flex-col notice">
-    <h3 class="text-gray-900 text-lg title-font font-medium">
-      {{ if (.Get "emoji") }}<span>{{ .Get "emoji" }}</span>{{ end }}
-      {{ .Get "title" }}
-    </h3>
-    {{ .Inner }}
-  </div>
+  <h3>
+    {{ .Get "title" }}
+  </h3>
+  {{ .Inner }}
   <hr class="hidden" />
 </div>
