Normalise notices and fix up image sizes for plex post

--- a/layouts/shortcodes/notice.html
+++ b/layouts/shortcodes/notice.html
@@ -1,7 +1,8 @@
 <div class="notice">
   <hr class="hidden" />
   <h3>
-    {{ .Get "title" }}
+  {{ if (.Get "emoji") }}<span>{{ .Get "emoji" }}</span>{{ end }}
+  {{- .Get "title" -}}
   </h3>
   {{ .Inner }}
   <hr class="hidden" />
