--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,7 +157,7 @@ svg {
 
 pre {
   border-radius: 0.375rem;
-  font-size: .75em;
+  font-size: 1.2em;
   overflow-x: auto;
   padding: 0.8rem 1.1rem;
 }
@@ -469,17 +469,23 @@ details {
   padding-bottom: .5em;
 }
 
-/* Code blocks, table and images get extra width */
-/* TODO: Don't use important, this is dumb but temporary while I do a migration */
 table, .highlight, pre[class*=language-], figure, #post-body img {
-  width: 110% !important;
-  margin-left: -5% !important;
+  width: 100%;
+}
+
+
+/* Code blocks, table and images get extra width but no elements are special on mobile */
+@media only screen and (min-width: 500px) {
+  table, .highlight, pre[class*=language-], figure, #post-body img {
+    width: 110%;
+    margin-left: -5%;
+  }
 }
 
 @media only screen and (min-width: 1000px) {
   table, .highlight, pre[class*=language-], figure, #post-body img {
-    width: 120% !important;
-    margin-left: -10% !important;
+    width: 150%;
+    margin-left: -25%;
   }
 }
 
