--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -488,7 +488,7 @@ table, .highlight, pre[class*=language-], figure, #post-body img {
 }
 
 @media only screen and (min-width: 1000px) {
-  table, .highlight, pre[class*=language-], figure, #post-body img {
+  table, .highlight, pre[class*=language-], figure {
     width: 150%;
     margin-left: -25%;
   }
