Mastodon meta header

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -17,6 +17,7 @@
 <link rel="canonical" href="{{ .Permalink | safeURL }}" />
 <link rel="apple-touch-icon" href="/favicon.png">
 <link rel="me" href="mailto:hello@utf9k.net" />
+<link rel="me" href="https://mastodon.nz/@utf9k" />
 <link rel="me" href="https://twitter.com/sentreh" />
 <link rel="me" href="https://github.com/marcus-crane" />
 <link rel="webmention" href="https://webmention.io/utf9k.net/webmention" />
